tests/sources/invalid/enums/enum_def_errors.fire
// Malformed enum definitions.

// Missing enum name
enum {  //~ ERROR FS-PARSE-0010 @6
    A  //~ ERROR FS-PARSE-0010 @5
}

// Duplicate variant
enum Dup {
    A,
    A  //~ ERROR FS-PARSE-0012 @5
//~^ ERROR FS-PARSE-0010 @6
}

// Payload field type is not a type
enum BadPayloadType {
    V(x: !)  //~ ERROR FS-PARSE-0010 @10
//~^ ERROR FS-PARSE-0010 @10
//~^^ ERROR FS-PARSE-0010 @10
//~^^^ ERROR FS-PARSE-0010 @10
}

// Missing payload field name
enum BadPayloadName {
    V(: int32)  //~ ERROR FS-PARSE-0010 @7
//~^ ERROR FS-PARSE-0010 @7
//~^^ ERROR FS-PARSE-0010 @7
//~^^^ ERROR FS-PARSE-0010 @7
}

// Duplicate payload field name
enum DupField {
    W(a: int32, a: int32)  //~ ERROR FS-PARSE-0012 @17
//~^ ERROR FS-PARSE-0010 @26
}

// Missing ')' to close payload
enum UnclosedPayload {
    P(a: int32
}  //~ ERROR FS-PARSE-0010 @1

// Missing ',' between variants
enum MissingComma {
    A
    B  //~ ERROR FS-PARSE-0010 @5
//~^ ERROR FS-PARSE-0010 @6
}

// No variants at all
enum Empty {  //~ ERROR FS-PARSE-0012 @6
}
